# GiGL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HELLO  LICENSE  Makefile  README.md  SECURITY.md  base_images.variable  conf.py  dep_vars.env  fossa-deps.yml  genindex.html  index.html  index.rst  mypy.ini  objects.inv  pull_request_template.md  py-modindex.html  search.html  searchindex.js
python/: MANIFEST.in  pyproject.toml  setup.py
python/gigl/analytics/graph_validation/: __init__.py  bq_graph_validator.py
python/gigl/common/: __init__.py  constants.py  env_config.py  logger.py
python/gigl/common/beam/: better_tfrecordio.py  coders.py
python/gigl/common/collections/: frozen_dict.py  itertools.py  sorted_dict.py
python/gigl/common/data/: dataloaders.py  export.py  load_torch_tensors.py
python/gigl/common/metrics/: base_metrics.py  decorators.py  metrics_interface.py
python/gigl/common/services/: dataproc.py  gcp_cloud_logging.py  kfp.py  vertex_ai.py
python/gigl/common/types/: resource_config.py
python/gigl/common/types/uri/: gcs_uri.py  http_uri.py  local_uri.py  uri.py  uri_factory.py
python/gigl/common/types/wrappers/: argo_workflow_manifest.py  kfp_api.py
python/gigl/common/utils/: dataflow.py  decorator.py  func_tools.py  gcs.py  kfp.py  local_fs.py  os_utils.py  proto_utils.py  retry.py  tensorflow_schema.py  test_utils.py  torch_training.py  vertex_ai_context.py
python/gigl/common/utils/compute/: random.py
python/gigl/distributed/: __init__.py  constants.py  dataset_factory.py  dist_context.py  dist_link_prediction_data_partitioner.py  dist_link_prediction_dataset.py  distributed_neighborloader.py
python/gigl/distributed/dataset/: dist_link_prediction_dataset.py
python/gigl/distributed/partitioner/: dist_link_prediction_data_partitioner.py
python/gigl/distributed/utils/: __init__.py  dataset_input_metadata_translator.py  device.py  init_neighbor_loader_worker.py  partition_book.py  serialized_graph_metadata_translator.py
python/gigl/env/: __init__.py  dep_constants.py  pipelines_config.py
python/gigl/orchestration/: __init__.py
python/gigl/orchestration/kubeflow/: kfp_orchestrator.py  kfp_pipeline.py  runner.py
python/gigl/orchestration/kubeflow/utils/: glt_backend.py  log_metrics.py  resource.py
python/gigl/orchestration/local/: runner.py
python/gigl/src/: __init__.py
python/gigl/src/applied_tasks/test_tasks/: academic.py
python/gigl/src/common/constants/: bq.py  components.py  gcs.py  graph_metadata.py  local_fs.py  metrics.py  resource_config.py  test_assets.py  time.py  training.py
python/gigl/src/common/graph_builder/: abstract_graph_builder.py  gbml_graph_protocol.py  graph_builder_factory.py  pyg_graph_builder.py  pyg_graph_data.py
python/gigl/src/common/modeling_task_specs/: __init__.py  graphsage_template_modeling_spec.py  node_anchor_based_link_prediction_modeling_task_spec.py  node_classification_modeling_task_spec.py
python/gigl/src/common/translators/: gbml_protos_translator.py  model_eval_metrics_translator.py  training_samples_protos_translator.py
python/gigl/src/common/types/: __init__.py  dataflow_job_options.py  dataset_split.py  exception.py  features.py  graph_data.py  (+4 more)
python/gigl/src/config_populator/: config_populator.py
python/gigl/src/data_preprocessor/: data_preprocessor.py
python/gigl/src/inference/: inferencer.py
python/gigl/src/mocking/: dataset_asset_mocker.py  dataset_asset_mocking_suite.py
python/gigl/src/post_process/: post_processor.py
python/gigl/src/split_generator/: split_generator.py
python/gigl/src/subgraph_sampler/: subgraph_sampler.py
python/gigl/src/training/: trainer.py
python/gigl/src/validation_check/: config_validator.py
python/gigl/types/: data.py  distributed.py
python/gigl/utils/: data_splitters.py  share_memory.py
python/snapchat/research/gbml/: dataset_metadata_pb2.py  dataset_metadata_pb2.pyi  flattened_graph_metadata_pb2.py  flattened_graph_metadata_pb2.pyi  gbml_config_pb2.py  gbml_config_pb2.pyi  gigl_resource_config_pb2.py  gigl_resource_config_pb2.pyi  graph_schema_pb2.py  graph_schema_pb2.pyi  inference_metadata_pb2.py  inference_metadata_pb2.pyi  postprocessed_metadata_pb2.py  postprocessed_metadata_pb2.pyi  preprocessed_metadata_pb2.py  preprocessed_metadata_pb2.pyi  subgraph_sampling_strategy_pb2.py  subgraph_sampling_strategy_pb2.pyi  trained_model_metadata_pb2.py  trained_model_metadata_pb2.pyi  training_samples_schema_pb2.py  training_samples_schema_pb2.pyi
python/tests/integration/: main.py
python/tests/integration/common/: dataflow_test.py  gcs_test.py
python/tests/integration/common_tests/: file_loader_test.py  gcs_test.py
python/tests/integration/distributed/: distributed_dataset_test.py
python/tests/integration/pipeline/: utils.py
python/tests/test_assets/: graph_metadata_constants.py  test_modeling_spec.py  uri_constants.py
python/tests/test_assets/celeb_test_graph/: assets.py
python/tests/test_assets/distributed/: constants.py  run_distributed_dataset.py  run_distributed_partitioner.py  utils.py
python/tests/test_assets/logging/: child_module_logging_test_helper.py
python/tests/test_assets/models/: pass_through.py
python/tests/test_assets/profile/: holistic_trace_analysis.ipynb  holistic_trace_analysis.md
python/tests/test_assets/small_graph/: preprocessed_metadata.yaml  sgs_input_node_anchor_link_prediction.yaml
python/tests/unit/: main.py
python/tests/unit/distributed/: dataset_input_metadata_translator_test.py  distributed_neighborloader_test.py  distributed_partitioner_test.py  load_and_build_dataset_test.py  partition_book_test.py
python/tests/unit/distributed_tests/: dataset_input_metadata_translator_test.py  distributed_partitioner_test.py
python/tests/unit/gnn_library_tests/: pyg_training_test.py
python/tests/unit/types_tests/: __init__.py  data_test.py  distributed_test.py
python/tests/unit/utils/: data_splitters_test.py  local_fs_test.py  share_memory_test.py
python/tests/unit/utils_tests/: gcs_test.py  os_utils_test.py
(+588 files in other folders)
